<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2018 The Xiaomi-SDM660 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="camera"
        android:title="@string/camera_title">

        <SwitchPreference
            android:defaultValue="false"
            android:key="hal3"
            android:title="@string/camera_hal3_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="eis"
            android:title="@string/camera_eis_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="torch"
        android:title="@string/torch_title">

        <org.lineageos.settings.device.TorchSeekBarPreference
            android:defaultValue="100"
            android:key="torch_brightness"
            android:max="255"
            android:min="1"
            android:title="@string/torch_brightness_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_title">

        <org.lineageos.settings.device.VibrationSeekBarPreference
            android:defaultValue="80"
            android:key="vibration_strength"
            android:max="100"
            android:min="1"
            android:title="@string/vibration_strength_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:title="@string/device_kcal_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.lineageos.settings.kcal.KCalSettingsActivity"
                android:targetPackage="org.lineageos.settings.kcal" />
        </Preference>

        <Preference
            android:key="device_doze"
            android:persistent="false"
            android:title="@string/device_doze_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.lineageos.settings.doze.DozeSettingsActivity"
                android:targetPackage="org.lineageos.settings.doze" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrum_profile"
        android:title="@string/spectrum_profile_title" >

		<ListPreference
			android:key="spectrum"
			android:title="@string/spectrum_title"
			android:summary="@string/spectrum_summary"
			android:defaultValue="0"
			android:entries="@array/spectrum_profiles"
			android:entryValues="@array/spectrum_values"
			android:dialogTitle="@string/spectrum_dialogTitle" />

    </PreferenceCategory>
</PreferenceScreen>
